# ChaosProtector-Android

./: PLAN.md  README.md
dex-protector/: build.gradle.kts
dex-protector/src/main/kotlin/com/chaosprotector/dex/: ControlFlowFlattener.kt  DexProtector.kt  StringEncryptor.kt
gradle-plugin/: build.gradle.kts  settings.gradle.kts
gradle-plugin/src/main/kotlin/com/chaosprotector/android/: ChaosProtectorExtension.kt  ChaosProtectorPlugin.kt
src/: CMakeLists.txt  exports_linux.map
src/cmake/: GitInfo.cmake
src/core/: CMakeLists.txt  Licensing.cpp  YamlObfuscationConfig.cpp  chaos_config.cpp  jitter.cpp  log.cpp  plugin.cpp  utils.cpp
src/core/python/: CMakeLists.txt  PyConfig.cpp  PyObfuscationConfig.cpp  PyObfuscationConfig.hpp  init.hpp  pyllvm.cpp  pylog.cpp  pyobf_opt.cpp
src/include/chaos_android/: ActiveConfig.hpp  Licensing.hpp  ObfuscationConfig.hpp  ProtectionFlags.hpp  PyConfig.hpp  YamlObfuscationConfig.hpp  chaos_config.hpp  config.hpp.in  jitter.hpp  log.hpp  passes.hpp  utils.hpp  versioning.hpp
src/include/chaos_android/passes/: Metadata.hpp  ObfuscationOpt.hpp
src/include/chaos_android/passes/anti-debug/: AntiDebug.hpp
src/include/chaos_android/passes/anti-hook/: AntiHook.hpp  AntiHookOpt.hpp
src/include/chaos_android/passes/anti-root/: AntiRoot.hpp
src/include/chaos_android/passes/anti-tamper/: AntiTamper.hpp
src/include/chaos_android/passes/arithmetic/: Arithmetic.hpp  ArithmeticOpt.hpp
src/include/chaos_android/passes/basic-block-duplicate/: BasicBlockDuplicate.hpp  BasicBlockDuplicateOpt.hpp
src/include/chaos_android/passes/break-cfg/: BreakControlFlow.hpp  BreakControlFlowOpt.hpp
src/include/chaos_android/passes/cfg-flattening/: ControlFlowFlattening.hpp  ControlFlowFlatteningOpt.hpp
src/include/chaos_android/passes/cleaning/: Cleaning.hpp
src/include/chaos_android/passes/function-outline/: FunctionOutline.hpp  FunctionOutlineOpt.hpp
src/include/chaos_android/passes/indirect-branch/: IndirectBranch.hpp  IndirectBranchOpt.hpp
src/include/chaos_android/passes/indirect-call/: IndirectCall.hpp  IndirectCallOpt.hpp
src/include/chaos_android/passes/ir-virtualization/: IRCompiler.hpp  IRVirtualization.hpp  VMInterpreterEmitter.hpp  VMOpcodes.hpp
src/include/chaos_android/passes/logger-bind/: LoggerBind.hpp
src/include/chaos_android/passes/objc-cleaner/: ObjCleaner.hpp  ObjCleanerOpt.hpp
src/include/chaos_android/passes/opaque-constants/: OpaqueConstants.hpp  OpaqueConstantsOpt.hpp
src/include/chaos_android/passes/opaque-field-access/: OpaqueFieldAccess.hpp  OpaqueFieldAccessOpt.hpp
src/include/chaos_android/passes/string-encoding/: Routines.h  StringEncoding.hpp  StringEncodingOpt.hpp
src/passes/: CMakeLists.txt  Metadata.cpp
src/passes/anti-debug/: AntiDebug.cpp  CMakeLists.txt
src/passes/anti-hook/: AntiHook.cpp  CMakeLists.txt
src/passes/anti-root/: AntiRoot.cpp  CMakeLists.txt
src/passes/anti-tamper/: AntiTamper.cpp  CMakeLists.txt
src/passes/arithmetic/: Arithmetic.cpp  CMakeLists.txt
src/passes/basic-block-duplicate/: BasicBlockDuplicate.cpp  CMakeLists.txt
src/passes/break-cfg/: BreakControlFlow.cpp  CMakeLists.txt
src/passes/cfg-flattening/: CMakeLists.txt  ControlFlowFlattening.cpp
src/passes/cleaning/: CMakeLists.txt  Cleaning.cpp
src/passes/function-outline/: CMakeLists.txt  FunctionOutline.cpp
src/passes/indirect-branch/: CMakeLists.txt  IndirectBranch.cpp
src/passes/indirect-call/: CMakeLists.txt  IndirectCall.cpp
src/passes/ir-virtualization/: CMakeLists.txt  IRCompiler.cpp  IRVirtualization.cpp  VMInterpreter.cpp
src/passes/logger-bind/: CMakeLists.txt  LoggerBind.cpp
src/passes/objc-cleaner/: CMakeLists.txt  ObjCleaner.cpp
src/passes/opaque-constants/: CMakeLists.txt  GenOpaque.cpp  GenOpaque.hpp  OpaqueConstants.cpp
src/passes/opaque-field-access/: CMakeLists.txt  OpaqueFieldAccess.cpp
src/passes/string-encoding/: CMakeLists.txt  Routines.cpp  StringEncoding.cpp
src/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
src/test/core/plugin/Inputs/: config_empty.py  config_output_folder.py
src/test/passes/arithmetic/: config_defaultConfig_empty_params.py  config_defaultConfig_exclude_function.py  config_defaultConfig_exclude_module.py  config_defaultConfig_include_function.py  config_defaultConfig_include_new_seed.py  config_defaultConfig_probability_100.py  config_exclude_function.py  config_exclude_module.py  config_rounds_0.py  config_rounds_1.py  config_rounds_2.py  config_rounds_3.py  report_diff.py
src/test/passes/basic-block-duplicate/: config_all.py
src/test/passes/break-cfg/: config_all.py
src/test/passes/cfg-flattening/: config_all.py  config_exclude_function.py  config_exclude_module.py
src/test/passes/function-outline/: config_all.py
src/test/passes/indirect-branch/: config_all.py
src/test/passes/indirect-call/: config_all.py
src/test/passes/opaque-constants/: config_all.py
src/test/passes/string-encoding/: basic-aarch64.cpp  basic-arm-android.cpp  config_exclude_function.py  config_exclude_module.py  config_remove.py  config_replace.py
src/test/swift-wmo/Inputs/: config_swift_wmo.py
tests/: .gitignore  chaos-android-full.yml  chaos-android.yml  run_full_tests.sh  run_tests.sh  setup_android.sh  test_aarch64.sh  test_aarch64_full.sh  test_all_obf  test_arith  test_basic.c  test_dbg  test_debug_vm.c  test_dex.sh  test_fn  test_interp_c  test_interp_c.c  test_minimal.c  test_ndk.sh  test_run  test_tiny  test_tiny2  test_tiny3  test_vm.s  test_vm_debug.c  test_vm_printf.c  test_vm_simple  test_vm_simple.c  test_vm_tiny.c  test_vm_tiny2.c  test_vm_tiny3.c
tests/chaos-android-tmp/cache/: chaos-android-cache-aarch64-unknown-linux-android-dec2b4.cpp
tests/java/: TestApp.java  TestStringEncrypt.java
